# Telegram-Ingestion-Pipeline

./: .env.postgres  .env.qdrant  .env.token  .gitignore  DOCKER_SETUP.md  PIPELINE.md  README.md  docker-compose.yml  pyproject.toml
db/config/: config.py
db/postgres/schema/: 001_create_tables.sql
db/postgres/utils/: 001_insert_data.sql
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  index.md
kafka/: kafka_engine.py
kafka/configs/: clients.json
kafka/schemas/: schema.json
src/kafka/: kafka_engine.py
src/kafka/configs/: clients.json
src/tg_ingestion_pipeline/: main.py
src/tg_ingestion_pipeline/app/: message_processing.py  ports.py
src/tg_ingestion_pipeline/core/: settings.py
src/tg_ingestion_pipeline/handlers/: audio.py  document.py  message.py  photo.py
src/tg_ingestion_pipeline/ingestion/handlers/: audio.py  document.py  message.py  photo.py
src/tg_ingestion_pipeline/ingestion/services/: media_downloader.py  message_publisher.py
src/tg_ingestion_pipeline/loading/: path_loader.py  save_media_files.py
src/tg_ingestion_pipeline/loading/db/: connect_db.py  init_db.py  insert_db.py
src/tg_ingestion_pipeline/loading/saving/: save_media_files.py  saving_paths.json
src/tg_ingestion_pipeline/loading/vectordb/: __init__.py  weaviate_client.py
src/tg_ingestion_pipeline/transformation/embeddings/: embedding_model.py
src/tg_ingestion_pipeline/transformation/processing/: data_flatten.py  data_loader.py  pipeline.py
src/tg_ingestion_pipeline/transformation/vectorization/: vectorizer.py
test/ingestion_test/: image_ocr_test.py
test/ingestion_test/audio_test/: sst_test.py
test/ingestion_test/document_test/: pdf_extractor_test.py
test/ingestion_test/photo_test/: image_ocr_test.py
test/loading_test/: save_media_files_test.py
test/resources/document/: sample.txt
tests/ingestion_test/audio_test/: sst_test.py
tests/ingestion_test/document_test/: docx_extractor_test.py  pdf_extractor_test.py  txt_extractor_test.py
tests/ingestion_test/photo_test/: image_ocr_test.py
tests/kafka_test/: kafka_broker_test.py
tests/kafka_test/configs/: client_test.json
tests/kafka_test/schemas/: schema.json
tests/loading_test/: save_media_files_test.py
tests/transformation_test/: test_embedding_model.py
vectordb/configs/: db.yaml
(+10 files in other folders)
