[project]
name = "Telegram-Ingestion-Pipeline"
version = "1.1.0"
description = "A robust ETL pipeline for Telegram group chats that ingests messages, extracts text and media metadata, transforms them into searchable content, and stores both structured records and vector embeddings for retrieval-augmented generation (RAG)."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pillow",
    "pytesseract",
    "python-telegram-bot",
    "python-dotenv",
    "opencv-python",
    "easyocr",
    "pdfplumber",
    "python-docx",
    "openai-whisper",
    "confluent-kafka",
    "psycopg2-binary",
    "weaviate-client>=3.0.0",
    "sentence-transformers>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
